--- a/.project
+++ b/.project
@@ -3,7 +3,7 @@
 Title=Find In Files
 Startup=FMain
 Icon=logo.png
-Version=0.0.1
+Version=0.0.2
 Component=gb.image
 Component=gb.gui.qt
 Component=gb.form
@@ -14,5 +14,6 @@ Description="To find text in files"
 Authors="Charlie Ogier 2017"
 TabSize=2
 Language=en_US
+CreateShortcut=1
 Vendor=cogier
 Packager=1
